# qt-apps-gammaray-plugin-qtivi

./: .gitignore  CMakeLists.txt  add_license.sh  header.GPL-QTAS
src/: CMakeLists.txt  gammaray_qtivi.json  qtivipropertymodel.cpp  qtivipropertymodel.h  qtivipropertyoverrider.cpp  qtivipropertyoverrider.h  qtivisupport.cpp  qtivisupport.h  qtivisupportwidget.cpp  qtivisupportwidget.h
